Fixed + alignment on large screen mobile view

--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -1564,7 +1564,7 @@
         }
 
         .SidebarContainer_filterAddChannel {
-            width: 260px;
+            width: 100%;
         }
 
         .SidebarChannelGroup {
